OSJ-309 - EntityAttribute metadata filter generates duplicate attributes
https://issues.shibboleth.net/jira/browse/OSJ-309

Guard against duplicates in NameIDFormat filter.